--- a/collins.css
+++ b/collins.css
@@ -6,6 +6,7 @@ body {
   font-style: 'Lato', san-serif;
   font-weight: 300;
 }
+
 /*FONT STYLES
 -------------------------------------------*/
 h1, h2 {font-family: 'Crimonson Text', serif;
@@ -19,6 +20,7 @@ h4, h5, h6 {font-weight: bold;}
 .lato {font-style: 'Lato', san-serif !important;}
 .panel-title {font-weight:normal;}
 
+
 /*NAVBAR CSS
 ----------------------------------------*/
 .navbar {
@@ -26,6 +28,7 @@ h4, h5, h6 {font-weight: bold;}
 }
 .navbar-nav {text-transform:uppercase;}
 .navbar, footer {background-color:#1A3E58;}
+
 
 /*JUMBOTRON CSS :: contain full image as header with no padding or margin
 --------------------------------------------------------------------------*/
@@ -38,6 +41,7 @@ h4, h5, h6 {font-weight: bold;}
 	border-radius: 10px;
 }
 
+
 /*ROW CSS :: pad content slightly within container
 ----------------------------------------------------------*/
 .row {
@@ -45,6 +49,8 @@ h4, h5, h6 {font-weight: bold;}
 	padding-right: 10px;
 }
 .padcontent {padding-bottom: 10px;}
+
+
 /*CAROUSEL CSS :: move buttons from obstructing image text and remove indicators
 --------------------------------------------------------------------------------*/
 .carousel-caption {padding-bottom: 3px;}
@@ -56,6 +62,8 @@ h4, h5, h6 {font-weight: bold;}
 .carousel-inner {
    margin-bottom:50px;
 }
+
+
 /*COLOR SCHEME CSS
 --------------------------------------------------------------*/
 .well {border-radius: 10px !important;
@@ -66,6 +74,7 @@ h4, h5, h6 {font-weight: bold;}
 						color:#FFF;
 }
 footer a:link {color: #FFF;}
+
 
 /*FOOTER CSS :: stickly footer with size and border radius mimicking navbar
 -----------------------------------------------------------------------------*/
@@ -82,8 +91,7 @@ footer p {
 }
 
 
-
-/*INDEX PAGE MARKETING LINKS CSS
+/*INDEX PAGE MARKETING LINKS CSS (credit to http://littlesnippets.net/)
 ---------------------------------------------*/
 figure.snip0063 {
   font-family: 'Raleway', Arial, sans-serif;
